vlib/v/checker/tests/option_or_block_returns_value_of_incompatible_type.out
vlib/v/checker/tests/option_or_block_returns_value_of_incompatible_type.vv:13:3: error: wrong return type `int literal` in the `or {}` block, expected `string`
   11 |         // must be of the same type of the return
   12 |         // type of the `test_option` function
   13 |         123
      |         ~~~
   14 |         // 'I break things'
   15 |     }
