vlib/v/checker/tests/option_or_block_returns_value_of_incompatible_type.vv
fn test_option(fail bool) !string {
	if fail {
		return error('false')
	}
	return 'fff'
}

fn main() {
	// a := test_option(false) or { println(err) }
	test_option(true) or {
		// must be of the same type of the return
		// type of the `test_option` function
		123
		// 'I break things'
	}
}
